feat(fin): add /periods crud endpoints
